2005-09-20  John W. Eaton  <jwe@octave.org>

	* general/isvector.m: Improve compatibility.

	* general/postpad.m: Allow first argument to be a scalar.
	Allow padding to extend dimensionality.
	* general/prepad.m: Likewise.

2005-09-14  Daniel  <durbano@shbano.com>

	* statistics/tests/bartlett_test.m, linear-algebra/cross.m,
	statistics/distributions/discrete_cdf.m, general/fliplr.m,
	/control/base/dgram.m: Doc string fixes.
	From Jorge Barros de Abreu <ficmatin01@solar.com.br>.

2005-09-12  Stefan van der Walt <stefan@sun.ac.za>

	* saveimage.m: Do not ignore most significant bit when writing
	black and white images to file.

2005-09-07  Bill Denney  <denney@seas.upenn.edu>

	* audio/playaudio.m, control/base/__bodquist__.m,
	control/base/lqg.m, control/obsolete/dezero.m,
	control/system/__syschnamesl__.m, control/system/__sysconcat__.m,
	control/system/c2d.m, control/system/cellidx.m,
	control/system/d2c.m, control/system/dmr2d.m,
	control/system/is_signal_list.m, control/system/listidx.m,
	control/system/ss.m, control/system/sysappend.m,
	control/system/sysconnect.m, control/system/sysdup.m,
	control/system/sysgetsignals.m, control/system/sysidx.m,
	control/system/sysprune.m, control/system/syssetsignals.m,
	control/system/tfout.m, control/system/zpout.m,
	control/util/prompt.m, control/util/sortcom.m,
	control/util/strappend.m, finance/fv.m, finance/nper.m,
	finance/pmt.m, finance/pv.m, finance/rate.m, general/diff.m,
	general/num2str.m, general/repmat.m, general/sortrows.m,
	general/strerror.m, image/colormap.m, image/imshow.m,
	image/loadimage.m, image/saveimage.m, linear-algebra/norm.m,
	miscellaneous/fileparts.m, miscellaneous/popen2.m,
	plot/__axis_label__.m, plot/__errcomm__.m, plot/__plt1__.m,
	plot/__plt2__.m, plot/__plt__.m, plot/__pltopt1__.m,
	plot/__pltopt__.m, plot/axis.m, plot/bottom_title.m, plot/close.m,
	plot/grid.m, plot/hist.m, plot/plot_border.m, plot/polar.m,
	plot/print.m, plot/title.m, plot/top_title.m,